--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1><center>Chapitre : CSS</center></h1>
+    <ul>Partie 1 : Les sélecteurs</ul>
+    <ol>
+        <li>Les selecteur simple</li>
+        <li>Les selecteur Combinés</li>
+        <li>notation de class et id</li>
+    </ol>
 </body>
 </html>
