--- a/index.html
+++ b/index.html
@@ -8,11 +8,36 @@
 </head>
 <body>
     <h1><center>Chapitre : CSS</center></h1>
-    <ul>Partie 1 : Les sélecteurs</ul>
+    <ul>
+        <li>
+            Partie 1 : Les sélecteurs
+        
+            <ol>
+                <li>Les selecteur simple</li>
+                <li>Les selecteur Combinés</li>
+                <li>notation de class et id</li>
+            </ol>
+
+        </li>
+        
+    <li>Partie 2 : DIV et SPAN
     <ol>
-        <li>Les selecteur simple</li>
-        <li>Les selecteur Combinés</li>
-        <li>notation de class et id</li>
+        <li>lA BALISE div</li>
+        <ul>
+            <li>Exemple</li>
+        </ul>
+        <li>La balise Span</li>
+</ol>
+</ul></li>
+  <li>Partie 3 : Pseudo-classes 
+ <ol></li>
+        <li>Règles affectant les liens</li>
+        <ul>
+            <li>Exemple</li>
+        </ul>
+        <li>Règles affectant les paragraphes</li>
     </ol>
+</li>
+</ul>
 </body>
 </html>
